internal/parser/magoito_parser.go
// Code generated from MagoitoParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // MagoitoParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type MagoitoParser struct {
	*antlr.BaseParser
}

var MagoitoParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func magoitoparserParserInit() {
	staticData := &MagoitoParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'const'", "'fun'", "'var'", "'if'", "'then'", "'else'", "'while'",
		"'do'", "'print'", "'true'", "'false'", "'unit'", "'Int'", "'Bool'",
		"'String'", "'Unit'", "'->'", "'=='", "'!='", "'<='", "'>='", "'||'",
		"'&&'", "'='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'",
		"'!'", "'.'", "';'", "':'", "','", "'('", "')'", "'{'", "'}'", "'_'",
	}
	staticData.SymbolicNames = []string{
		"", "CONST", "FUN", "VAR", "IF", "THEN", "ELSE", "WHILE", "DO", "PRINT",
		"TRUE", "FALSE", "UNIT_VALUE", "INT_TYPE", "BOOL_TYPE", "STRING_TYPE",
		"UNIT_TYPE", "ARROW", "EQ", "NEQ", "LTE", "GTE", "OR", "AND", "ASSIGN",
		"LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "POWER", "NOT",
		"DOT", "SEMICOLON", "COLON", "COMMA", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "WILDCARD", "IDENTIFIER", "INT_LITERAL", "STRING_LITERAL",
		"LINE_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"program", "declaration", "binder", "typeExpr", "nonTupleType", "tupleType",
		"basicType", "recordType", "recordTypeField", "expr", "seqExpr", "controlExpr",
		"varDeclExpr", "whileExpr", "ifExpr", "assignExpr", "orExpr", "andExpr",
		"equalityExpr", "comparisonExpr", "additiveExpr", "multiplicativeExpr",
		"powerExpr", "unaryExpr", "projectionExpr", "primaryExpr", "callExpr",
		"callee", "recordExpr", "recordFieldList", "recordField",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// MagoitoParserInit initializes any static state used to implement MagoitoParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewMagoitoParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func MagoitoParserInit() {
	staticData := &MagoitoParserParserStaticData
	staticData.once.Do(magoitoparserParserInit)
}

// NewMagoitoParser produces a new parser instance for the optional input antlr.TokenStream.
func NewMagoitoParser(input antlr.TokenStream) *MagoitoParser {
	MagoitoParserInit()
	this := new(MagoitoParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &MagoitoParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "MagoitoParser.g4"

	return this
}

// MagoitoParser tokens.
const (
	MagoitoParserEOF            = antlr.TokenEOF
	MagoitoParserCONST          = 1
	MagoitoParserFUN            = 2
	MagoitoParserVAR            = 3
	MagoitoParserIF             = 4
	MagoitoParserTHEN           = 5
	MagoitoParserELSE           = 6
	MagoitoParserWHILE          = 7
	MagoitoParserDO             = 8
	MagoitoParserPRINT          = 9
	MagoitoParserTRUE           = 10
	MagoitoParserFALSE          = 11
	MagoitoParserUNIT_VALUE     = 12
	MagoitoParserINT_TYPE       = 13
	MagoitoParserBOOL_TYPE      = 14
	MagoitoParserSTRING_TYPE    = 15
	MagoitoParserUNIT_TYPE      = 16
	MagoitoParserARROW          = 17
	MagoitoParserEQ             = 18
	MagoitoParserNEQ            = 19
	MagoitoParserLTE            = 20
	MagoitoParserGTE            = 21
	MagoitoParserOR             = 22
	MagoitoParserAND            = 23
	MagoitoParserASSIGN         = 24
	MagoitoParserLT             = 25
	MagoitoParserGT             = 26
	MagoitoParserPLUS           = 27
	MagoitoParserMINUS          = 28
	MagoitoParserSTAR           = 29
	MagoitoParserSLASH          = 30
	MagoitoParserPERCENT        = 31
	MagoitoParserPOWER          = 32
	MagoitoParserNOT            = 33
	MagoitoParserDOT            = 34
	MagoitoParserSEMICOLON      = 35
	MagoitoParserCOLON          = 36
	MagoitoParserCOMMA          = 37
	MagoitoParserLPAREN         = 38
	MagoitoParserRPAREN         = 39
	MagoitoParserLBRACE         = 40
	MagoitoParserRBRACE         = 41
	MagoitoParserWILDCARD       = 42
	MagoitoParserIDENTIFIER     = 43
	MagoitoParserINT_LITERAL    = 44
	MagoitoParserSTRING_LITERAL = 45
	MagoitoParserLINE_COMMENT   = 46
	MagoitoParserWS             = 47
)

// MagoitoParser rules.
const (
	MagoitoParserRULE_program            = 0
	MagoitoParserRULE_declaration        = 1
	MagoitoParserRULE_binder             = 2
	MagoitoParserRULE_typeExpr           = 3
	MagoitoParserRULE_nonTupleType       = 4
	MagoitoParserRULE_tupleType          = 5
	MagoitoParserRULE_basicType          = 6
	MagoitoParserRULE_recordType         = 7
	MagoitoParserRULE_recordTypeField    = 8
	MagoitoParserRULE_expr               = 9
	MagoitoParserRULE_seqExpr            = 10
	MagoitoParserRULE_controlExpr        = 11
	MagoitoParserRULE_varDeclExpr        = 12
	MagoitoParserRULE_whileExpr          = 13
	MagoitoParserRULE_ifExpr             = 14
	MagoitoParserRULE_assignExpr         = 15
	MagoitoParserRULE_orExpr             = 16
	MagoitoParserRULE_andExpr            = 17
	MagoitoParserRULE_equalityExpr       = 18
	MagoitoParserRULE_comparisonExpr     = 19
	MagoitoParserRULE_additiveExpr       = 20
	MagoitoParserRULE_multiplicativeExpr = 21
	MagoitoParserRULE_powerExpr          = 22
	MagoitoParserRULE_unaryExpr          = 23
	MagoitoParserRULE_projectionExpr     = 24
	MagoitoParserRULE_primaryExpr        = 25
	MagoitoParserRULE_callExpr           = 26
	MagoitoParserRULE_callee             = 27
	MagoitoParserRULE_recordExpr         = 28
	MagoitoParserRULE_recordFieldList    = 29
	MagoitoParserRULE_recordField        = 30
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllDeclaration() []IDeclarationContext
	Declaration(i int) IDeclarationContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MagoitoParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(MagoitoParserEOF, 0)
}

func (s *ProgramContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MagoitoParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, MagoitoParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == MagoitoParserCONST || _la == MagoitoParserFUN {
		{
			p.SetState(62)
			p.Declaration()
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(67)
		p.Match(MagoitoParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclarationContext is an interface to support dynamic dispatch.
type IDeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsDeclarationContext differentiates from other interfaces.
	IsDeclarationContext()
}

type DeclarationContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationContext() *DeclarationContext {
	var p = new(DeclarationContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_declaration
	return p
}

func InitEmptyDeclarationContext(p *DeclarationContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_declaration
}

func (*DeclarationContext) IsDeclarationContext() {}

func NewDeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationContext {
	var p = new(DeclarationContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MagoitoParserRULE_declaration

	return p
}

func (s *DeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationContext) CopyAll(ctx *DeclarationContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *DeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type ConstDeclarationContext struct {
	DeclarationContext
}

func NewConstDeclarationContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ConstDeclarationContext {
	var p = new(ConstDeclarationContext)

	InitEmptyDeclarationContext(&p.DeclarationContext)
	p.parser = parser
	p.CopyAll(ctx.(*DeclarationContext))

	return p
}

func (s *ConstDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstDeclarationContext) CONST() antlr.TerminalNode {
	return s.GetToken(MagoitoParserCONST, 0)
}

func (s *ConstDeclarationContext) Binder() IBinderContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBinderContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBinderContext)
}

func (s *ConstDeclarationContext) COLON() antlr.TerminalNode {
	return s.GetToken(MagoitoParserCOLON, 0)
}

func (s *ConstDeclarationContext) TypeExpr() ITypeExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeExprContext)
}

func (s *ConstDeclarationContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(MagoitoParserASSIGN, 0)
}

func (s *ConstDeclarationContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ConstDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitConstDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

type FunDeclarationContext struct {
	DeclarationContext
}

func NewFunDeclarationContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *FunDeclarationContext {
	var p = new(FunDeclarationContext)

	InitEmptyDeclarationContext(&p.DeclarationContext)
	p.parser = parser
	p.CopyAll(ctx.(*DeclarationContext))

	return p
}

func (s *FunDeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunDeclarationContext) FUN() antlr.TerminalNode {
	return s.GetToken(MagoitoParserFUN, 0)
}

func (s *FunDeclarationContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(MagoitoParserIDENTIFIER, 0)
}

func (s *FunDeclarationContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(MagoitoParserLPAREN, 0)
}

func (s *FunDeclarationContext) AllBinder() []IBinderContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBinderContext); ok {
			len++
		}
	}

	tst := make([]IBinderContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBinderContext); ok {
			tst[i] = t.(IBinderContext)
			i++
		}
	}

	return tst
}

func (s *FunDeclarationContext) Binder(i int) IBinderContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBinderContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBinderContext)
}

func (s *FunDeclarationContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(MagoitoParserRPAREN, 0)
}

func (s *FunDeclarationContext) COLON() antlr.TerminalNode {
	return s.GetToken(MagoitoParserCOLON, 0)
}

func (s *FunDeclarationContext) TypeExpr() ITypeExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeExprContext)
}

func (s *FunDeclarationContext) ASSIGN() antlr.TerminalNode {
	return s.GetToken(MagoitoParserASSIGN, 0)
}

func (s *FunDeclarationContext) Expr() IExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *FunDeclarationContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(MagoitoParserCOMMA)
}

func (s *FunDeclarationContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(MagoitoParserCOMMA, i)
}

func (s *FunDeclarationContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitFunDeclaration(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MagoitoParser) Declaration() (localctx IDeclarationContext) {
	localctx = NewDeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, MagoitoParserRULE_declaration)
	var _la int

	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MagoitoParserCONST:
		localctx = NewConstDeclarationContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(69)
			p.Match(MagoitoParserCONST)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(70)
			p.Binder()
		}
		{
			p.SetState(71)
			p.Match(MagoitoParserCOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(72)
			p.TypeExpr()
		}
		{
			p.SetState(73)
			p.Match(MagoitoParserASSIGN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(74)
			p.Expr()
		}

	case MagoitoParserFUN:
		localctx = NewFunDeclarationContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(76)
			p.Match(MagoitoParserFUN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(77)
			p.Match(MagoitoParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(78)
			p.Match(MagoitoParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(79)
			p.Binder()
		}
		p.SetState(84)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == MagoitoParserCOMMA {
			{
				p.SetState(80)
				p.Match(MagoitoParserCOMMA)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}
			{
				p.SetState(81)
				p.Binder()
			}

			p.SetState(86)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(87)
			p.Match(MagoitoParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(88)
			p.Match(MagoitoParserCOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(89)
			p.TypeExpr()
		}
		{
			p.SetState(90)
			p.Match(MagoitoParserASSIGN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(91)
			p.Expr()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBinderContext is an interface to support dynamic dispatch.
type IBinderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsBinderContext differentiates from other interfaces.
	IsBinderContext()
}

type BinderContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBinderContext() *BinderContext {
	var p = new(BinderContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_binder
	return p
}

func InitEmptyBinderContext(p *BinderContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_binder
}

func (*BinderContext) IsBinderContext() {}

func NewBinderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BinderContext {
	var p = new(BinderContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MagoitoParserRULE_binder

	return p
}

func (s *BinderContext) GetParser() antlr.Parser { return s.parser }

func (s *BinderContext) CopyAll(ctx *BinderContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *BinderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BinderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type IdBinderContext struct {
	BinderContext
}

func NewIdBinderContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *IdBinderContext {
	var p = new(IdBinderContext)

	InitEmptyBinderContext(&p.BinderContext)
	p.parser = parser
	p.CopyAll(ctx.(*BinderContext))

	return p
}

func (s *IdBinderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdBinderContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(MagoitoParserIDENTIFIER, 0)
}

func (s *IdBinderContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitIdBinder(s)

	default:
		return t.VisitChildren(s)
	}
}

type WildcardBinderContext struct {
	BinderContext
}

func NewWildcardBinderContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *WildcardBinderContext {
	var p = new(WildcardBinderContext)

	InitEmptyBinderContext(&p.BinderContext)
	p.parser = parser
	p.CopyAll(ctx.(*BinderContext))

	return p
}

func (s *WildcardBinderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WildcardBinderContext) WILDCARD() antlr.TerminalNode {
	return s.GetToken(MagoitoParserWILDCARD, 0)
}

func (s *WildcardBinderContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitWildcardBinder(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *MagoitoParser) Binder() (localctx IBinderContext) {
	localctx = NewBinderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, MagoitoParserRULE_binder)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case MagoitoParserIDENTIFIER:
		localctx = NewIdBinderContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(95)
			p.Match(MagoitoParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case MagoitoParserWILDCARD:
		localctx = NewWildcardBinderContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(96)
			p.Match(MagoitoParserWILDCARD)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITypeExprContext is an interface to support dynamic dispatch.
type ITypeExprContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsTypeExprContext differentiates from other interfaces.
	IsTypeExprContext()
}

type TypeExprContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeExprContext() *TypeExprContext {
	var p = new(TypeExprContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_typeExpr
	return p
}

func InitEmptyTypeExprContext(p *TypeExprContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = MagoitoParserRULE_typeExpr
}

func (*TypeExprContext) IsTypeExprContext() {}

func NewTypeExprContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeExprContext {
	var p = new(TypeExprContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = MagoitoParserRULE_typeExpr

	return p
}

func (s *TypeExprContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeExprContext) CopyAll(ctx *TypeExprContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *TypeExprContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeExprContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type TupleArrowTypeContext struct {
	TypeExprContext
}

func NewTupleArrowTypeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TupleArrowTypeContext {
	var p = new(TupleArrowTypeContext)

	InitEmptyTypeExprContext(&p.TypeExprContext)
	p.parser = parser
	p.CopyAll(ctx.(*TypeExprContext))

	return p
}

func (s *TupleArrowTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TupleArrowTypeContext) TupleType() ITupleTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITupleTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITupleTypeContext)
}

func (s *TupleArrowTypeContext) ARROW() antlr.TerminalNode {
	return s.GetToken(MagoitoParserARROW, 0)
}

func (s *TupleArrowTypeContext) TypeExpr() ITypeExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeExprContext)
}

func (s *TupleArrowTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case MagoitoParserVisitor:
		return t.VisitTupleArrowType(s)

	default:
		return t.VisitChildren(s)
	}
}

type ArrowTypeContext struct {
	TypeExprContext
}
